# paoo-hw

./: CMakeLists.txt  Constants.h  main.cpp
_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.sln  main.vcxproj  main.vcxproj.filters
_build/book/: book.vcxproj  book.vcxproj.filters  cmake_install.cmake
_build/book/Debug/: book.lib
_build/book/book.dir/Debug/book.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
_build/main.dir/Debug/: main.exe.recipe  main.ilk
_build/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
_build/shelf/: cmake_install.cmake  shelf.vcxproj  shelf.vcxproj.filters
_build/shelf/Debug/: shelf.lib
_build/shelf/shelf.dir/Debug/shelf.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+3 more)
_documentation/: homeworks.docx  ~$meworks.docx
book/: Book.cpp  Book.h  CMakeLists.txt  NovelBook.cpp  PoemBook.cpp
shelf/: CMakeLists.txt  Shelf.cpp  Shelf.h  ShelfConstants.h  ShelfNovelBooks.cpp  ShelfPoemBooks.cpp
